--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <title>Spring Security Example</title>
+<meta charset="UTF-8">
+<title></title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
-
-
+	<div>
+		<h1>Welkomme to my project</h1>
+	</div>
+	<div sec:authorize="isAuthenticated()">
+  		<a th:href="@{/logout}">logout</a><br>
+	</div>
+	<a href="/admin/users">users</a>
 </body>
 </html>
