--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,20 +2,72 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Person page</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<title>Person page</title>
 </head>
 <body>
-	<div style="background-color:#eeedfa; border-radius:15px;"><br/>
-		<h2 th:text="${user.getName()}" align="center"></h2><br/>
-	</div>
-	<p>Total sum on account:</p>
-	<p th:text="${user.getWallet()}" /><br/>
+
+
+	<nav class="navbar navbar-expand-lg bg-light navbar-light text-white bg-dark">
+		<div class="container-fluid">
+			 <div class="collapse navbar-collapse show" id="navbarDark">
+			 	<ul class="navbar-nav me-auto mb-2 mb-xl-0">
+					<span class="font-weight-bold mr-1" th:text="${user.getName()}"></span>
+        			<span class="mr-1">with roles:</span>
+        			<span th:text="${user.getRoleNames()}"></span>
+        		</ul>
+			 </div>	
+			<form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
+   				<button type="submit" class="btn btn-dark text-secondary my-2 my-sm-0">Logout</button>
+   			</form>
+		</div>
+	</nav>
 	
-	<div sec:authorize="hasRole('ROLE_ADMIN')">
-		<form th:method="DELETE" th:action="@{/admin/users/{id}/remove(id=${user.getId()})}">
-			<input type="submit" value="Delete account"/>
-		</form>
+	<div class="container-fluid">
+		 <div class="row">
+    		<div class="p-0 col-2">
+      			<div class="nav flex-column nav-pills pt-2" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        			<a class="nav-link" href="/admin/users/" sec:authorize="(hasRole('ROLE_ADMIN'))"aria-controls="v-pills-home" aria-selected="false">Admin</a>
+        			<a class="nav-link active" th:text="${user.getName()}" sec:authorize="(hasAnyRole('ROLE_USER','ROLE_ADMIN'))"role="tab"aria-controls="v-pills-profile" aria-selected="true">user</a>
+      			</div>
+   			</div>
+	
+		 	<div class="px-0 col-10">
+				<div class="container-fluid">
+					<h1>User information-page</h1>
+					<div class="tab-content">
+          				<div class="tab-pane fade show active">
+          					<div class="card">
+              					<div class="card-header">
+          							<h4>About user</h>
+          						</div>
+          						<div class="card-body">
+                					<table class="table table-hover">
+                  						<tr>
+                    						<th>ID</th>
+                    						<th>NAME</th>
+                    						<th>AVAILABLE SUM</th>
+                    						<th>ROLES</th>
+                  						</tr>
+                  						<td th:text="${user.getId()}"></td>
+                  						<td th:text="${user.getName()}"></td>
+                  						<td th:text="${user.getWallet()}"></td>
+                  						<td th:text="${user.getRoleNames()}"></td>
+                					</table>
+          						</div>
+          					</div>	
+          				</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+
+	
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>		
 </body>
 </html>
