--- a/src/main/resources/templates/admin_info.html
+++ b/src/main/resources/templates/admin_info.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-
+	<!-- TOP -->
 	<nav class="navbar navbar-expand-lg bg-light navbar-light text-white bg-dark">
 		<div class="container-fluid">
 			 <div class="collapse navbar-collapse show" id="navbarDark">
 			 	<ul class="navbar-nav me-auto mb-2 mb-xl-0">
-					<span class="font-weight-bold mr-1" th:text="${user.getName()}"></span>
+					<span class="font-weight-bold mr-1" th:text="${user.getEmail()}"></span>
         			<span class="mr-1">with roles:</span>
         			<span th:text="${user.getRoleNames()}"></span>
         		</ul>
@@ -25,15 +25,17 @@
 		</div>
 	</nav>
 	
+	<!-- LEFT PANEL -->
 	<div class="container-fluid">
 		 <div class="row">
     		<div class="p-0 col-2">
       			<div class="nav flex-column nav-pills pt-2" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-        			<a class="nav-link" href="/admin/users/" sec:authorize="(hasRole('ROLE_ADMIN'))"aria-controls="v-pills-home" aria-selected="false">Admin</a>
-        			<a class="nav-link active" th:text="${user.getName()}" sec:authorize="(hasAnyRole('ROLE_USER','ROLE_ADMIN'))"role="tab"aria-controls="v-pills-profile" aria-selected="true">user</a>
+        			<a class="nav-link" href="/admin" sec:authorize="(hasRole('ROLE_ADMIN'))"aria-controls="v-pills-home" aria-selected="false">Admin</a>
+        			<a class="nav-link active" th:text="${user.getFirstName()}" sec:authorize="(hasAnyRole('ROLE_USER','ROLE_ADMIN'))"role="tab"aria-controls="v-pills-profile" aria-selected="true">user</a>
       			</div>
    			</div>
 	
+	<!-- RIGHT PANEL -->
 		 	<div class="px-0 col-10">
 				<div class="container-fluid">
 					<h1>User information-page</h1>
@@ -47,13 +49,17 @@
                 					<table class="table table-hover">
                   						<tr>
                     						<th>ID</th>
-                    						<th>NAME</th>
-                    						<th>AVAILABLE SUM</th>
+                    						<th>FIRST NAME</th>
+                    						<th>LAST NAME</th>
+                    						<th>AGE</th>
+                    						<th>EMAIL</th>
                     						<th>ROLES</th>
                   						</tr>
                   						<td th:text="${user.getId()}"></td>
-                  						<td th:text="${user.getName()}"></td>
-                  						<td th:text="${user.getWallet()}"></td>
+                  						<td th:text="${user.getFirstName()}"></td>
+                  						<td th:text="${user.getLastName()}"></td>
+                  						<td th:text="${user.getAge()}"></td>
+                  						<td th:text="${user.getEmail()}"></td>
                   						<td th:text="${user.getRoleNames()}"></td>
                 					</table>
           						</div>
@@ -68,6 +74,6 @@
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>		
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>	
 </body>
 </html>
