--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -19,8 +19,8 @@
         			<span>ROLE_ADMIN</span>
         		</ul>
 			 </div>	
-			<form class="form-inline my-2 my-lg-0" href="/logout" method="post">
-   				<button type="submit" class="btn btn-dark text-secondary my-2 my-sm-0">Logout</button>
+			<form class="form-inline my-2 my-lg-0">
+   				<a href="/logout" type="submit" role="button" class="btn btn-dark text-secondary my-2 my-sm-0">Logout</a>
    			</form>
 		</div>
 	</nav>
